cluster/apps/monitoring/vpn-server/pihole-exporter/networkpolicies/prometheus-egress-pihole-exporter.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-pihole-exporter
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
      app.kubernetes.io/name: prometheus
  egress:
    - toCIDR:
        - 10.0.0.3/32
      toPorts:
        - ports:
            - port: "9617"
              protocol: TCP
